# web3indexer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
abi/: ERC1155.json  ERC721.json
web3indexer/: block_fetcher.py  collector.py  constants.py  consumer.py  crud.py  dispatcher.py  indexer.py  log_processor.py  message_handler.py  models.py  processor.py  producer.py  task.py  utils.py  worker.py
